--- a/app/views/admin/edit_category_picture.rhtml
+++ b/app/views/admin/edit_category_picture.rhtml
@@ -21,7 +21,7 @@
 			    <%= form.text_field :position, :size=> '3'%>
 			
 			  </p></div>
-			<div class='options'>
+			<div>
 			    <%= submit_tag "Save", :class => :submit %>
 				<%= link_to 'Cancel', :action => :edit_category, :id => @category %>		
 			</div>
