--- a/public/stylesheets/waiateara.css
+++ b/public/stylesheets/waiateara.css
@@ -318,13 +318,13 @@ div.image_list {
 	margin:0;
 	margin-top:10px;
 	padding:1em;
-	width:270px;
+	width:250px;
 	height:220px;
 }
 
 .image_caption {
 	margin-left:3em;
-	width:220px;
+	width:auto;
 	color:#000;
 }
 
@@ -334,9 +334,9 @@ div.image_list {
 	font-size:11px;
 	line-height:16px;
 	vertical-align: top;
-	text-align: justify;
+	text-align: left;
 	padding:0;
-	width:250px;
+	width:auto;
 }
 
 .header { 
@@ -455,6 +455,10 @@ div#admin #maintenance  h1 {
 	height:auto;
 	color: #000;
 	background:white;
+}
+
+div.confirm {
+	padding:3em;
 }
 
 #maintenance .dialog form {
