--- a/public/stylesheets/waiateara.css
+++ b/public/stylesheets/waiateara.css
@@ -42,9 +42,9 @@ p.home_header {
 
 h1 {
 	font-family: sans-serif, helvetica, times;	
-	font-size:   26px;
+	font-size:   20px;
 	text-align: center;
-	color: #999;
+	color: #ccc;
 	
 	
 }
