--- a/public/stylesheets/waiateara.css
+++ b/public/stylesheets/waiateara.css
@@ -308,6 +308,7 @@ div.paginate a:hover { color: orange }
 div.image_list {
 	padding:2em;
 	padding-top:1em;
+	padding-bottom:1em;
 	margin:0;
 	margin-top:5em;
 	margin-left:3em;
