--- a/public/stylesheets/prototype-ui.css
+++ b/public/stylesheets/prototype-ui.css
@@ -18,7 +18,7 @@
 #horizontal_carousel ul {
   margin: 0;
   padding:0;
-  width: 5000px;
+  width: 10000px;
   position: relative;
   top: 0;
   left: 0;
@@ -29,8 +29,8 @@
 
 #horizontal_carousel ul li {
 	float:left;
-	width:250;
-	height: 188px;
+	width:350px;
+	height: 250px;
 	margin-right:10px;
 	margin-left:0;
 	padding:0;
@@ -38,11 +38,11 @@
 	list-style:none;   
 	cursor: pointer;
 }
- li.grow img {
-	width:250px;
+#horizontal_carousel ul li.grow img {
+	width:350px;
 	margin:0;
 	padding:0;
-	height: 188px;
+	height: 250px;
 	-o-box-shadow:      0 8px 15px #555;
 	-icab-box-shadow:   0 8px 15px #555;
 	-khtml-box-shadow:  0 8px 15px #555;
@@ -57,10 +57,9 @@
 }
 /*GROW*/
  
-li.grow img:hover {
-	width: 252px;
-	height:189px;
-
+.grow img:hover {
+  width: 450px;
+	float:left;
 }
 
 #left_fixed {
