--- a/public/stylesheets/prototype-ui.css
+++ b/public/stylesheets/prototype-ui.css
@@ -58,7 +58,10 @@
 /*GROW*/
  
 .grow img:hover {
-  width: 450px;
+  height:190px;
+	border:2px;
+	border-style: solid;
+	border-color:orange;
 	float:left;
 }
 
