--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -305,13 +305,12 @@ div.paginate a:hover { color: orange }
 div.image_list {
 	padding:2em;
 	margin:0;
-	margin-top:10em;
+	margin-top:1em;
 	margin-left:3em;
 	width:101%;
 	height:auto;
 	overflow:hidden;
-	border:1px dotted gray;
-}
+	}
 
 .image {
 	float:left;
@@ -385,7 +384,6 @@ body#admin h1 {
 	height:1350px;
 	color: #636363;
 	background-color: #fff;
-	border:1px dotted gray;
 }
 
 div#admin #maintenance  h1 {
@@ -468,7 +466,6 @@ div.confirm {
 	padding:2em;
 	padding-left:3em;
 	margin:2em;
-	border:1px dotted gray;
 }
 
 .dialog a {
@@ -669,7 +666,7 @@ div#image_page_large {
 /* CATEGORIES */
 table.categories {
 	background:#eee;
-	width:50%;
+	width:30%;
 	
 }
 
@@ -687,6 +684,7 @@ th.categories {
 
 td.category_row {
 	color:#333;
+	padding:5px;
 	padding-left:10px;
 	font-style:italic;
 	background:#eee;
